--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Link Dashboard - Favicons</title>
+  <title>Link Dashboard - Full Version</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   <style>
@@ -11,138 +11,55 @@
       margin: 0; padding: 0;
       color: white;
       transition: background 0.5s ease;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
-
     .container {
-      width: 95%;
-      max-width: 1000px;
-      margin: auto;
-      padding: 20px;
-      background: rgba(0,0,0,0.2);
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+      width: 95%; max-width: 1000px; margin: auto; padding: 20px;
+      background: rgba(0,0,0,0.25); border-radius: 15px; box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
-
     h1 {
-      color: #4CAF50;
-      margin-bottom: 20px;
+      color: #4CAF50; margin-bottom: 20px;
       display:flex; justify-content:center; align-items:center; gap:10px;
     }
-    #toggleEdit {
-      background:#fff; color:#4CAF50; font-weight:bold;
-      border:none; padding:5px 10px; border-radius:6px; cursor:pointer; font-size:14px;
-    }
-
+    #toggleEdit { background:#fff; color:#4CAF50; font-weight:bold; border:none; padding:5px 10px; border-radius:6px; cursor:pointer; font-size:14px; }
     .category-header {
-      font-size: 20px;
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      user-select: none;
-      margin-top:20px;
+      font-size: 20px; cursor: pointer;
+      display: flex; justify-content: center; align-items: center; gap: 10px;
+      user-select: none; margin-top:20px;
     }
-
-    .link-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 10px;
-      transition: max-height 0.3s ease;
-      overflow: hidden;
-    }
-
+    .link-grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 10px; transition: max-height 0.3s ease; overflow: hidden; }
     .link-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 120px; height: 120px;
-      background: rgba(34,34,34,0.6);
-      border-radius: 20px;
-      border: 2px solid #fff;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      position: relative;
-      transition: transform 0.2s ease;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      width: 120px; height: 120px; background: rgba(34,34,34,0.6);
+      border-radius: 20px; border: 2px solid #fff; text-decoration: none; color: white;
+      font-weight: bold; position: relative; transition: transform 0.2s ease;
     }
-
     .link-box img { width:36px; height:36px; margin-bottom:8px; border-radius:6px; }
     .link-label { font-size: 14px; text-align: center; }
-
-    .edit-buttons {
-      position: absolute;
-      bottom: 5px; right: 5px;
-      display: none;
-      gap: 5px;
-    }
-
-    .edit-buttons button {
-      background: rgba(255,255,255,0.8);
-      border: none;
-      color: #333;
-      border-radius: 5px;
-      padding: 2px 5px;
-      font-size: 12px;
-      cursor: pointer;
-    }
-
+    .edit-buttons { position: absolute; bottom: 5px; right: 5px; display: none; gap: 5px; }
+    .edit-buttons button { background: rgba(255,255,255,0.8); border: none; color: #333; border-radius: 5px; padding: 2px 5px; font-size: 12px; cursor: pointer; }
     .edit-mode .edit-buttons { display: flex; }
-
     footer { margin-top: 25px; font-size: 12px; color: gray; }
-
-    .School { background: rgba(52, 152, 219, 0.8); }  
-    .Personal { background: rgba(155, 89, 182, 0.8); } 
-    .TechNews { background: rgba(230, 126, 34, 0.8); }
-
-    @media screen and (max-width: 800px) {
-      .link-box { width: 140px; height: 140px; }
-      .link-box img { width:40px; height:40px; }
-      .link-label { font-size: 16px; }
-    }
-
-    @media screen and (max-width: 600px) {
-      .link-box { width: 30%; height: 150px; }
-      .link-box img { width:50px; height:50px; }
-      .link-label { font-size: 20px; }
-    }
-
-    .floatingBtn {
-      position: fixed; bottom: 25px; right: 25px;
-      background: #4CAF50; color:white; border:none; border-radius:50%;
-      width:60px; height:60px; font-size:30px; cursor:pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3); z-index:999;
-    }
+    @media screen and (max-width: 800px) { .link-box { width: 140px; height: 140px; } .link-box img { width:40px; height:40px; } .link-label { font-size: 16px; } }
+    @media screen and (max-width: 600px) { .link-box { width: 30%; height: 150px; } .link-box img { width:50px; height:50px; } .link-label { font-size: 20px; } }
+    .floatingBtn { position: fixed; bottom: 25px; right: 25px; background: #4CAF50; color:white; border:none; border-radius:50%; width:60px; height:60px; font-size:30px; cursor:pointer; box-shadow: 0 4px 8px rgba(0,0,0,0.3); z-index:999; }
     #changeBackgroundBtn { right:100px; width:auto; height:auto; border-radius:8px; font-size:16px; padding:10px 15px; }
-
-    .popup {
-      position: fixed; top:0; left:0; right:0; bottom:0;
-      background: rgba(0,0,0,0.8); display: none;
-      justify-content: center; align-items: center; z-index: 1000;
-    }
-    .popupContent {
-      background: rgba(50,50,50,0.95); padding:20px; border-radius:15px;
-      width:90%; max-width:400px; display:flex; flex-direction:column; gap:10px;
-    }
-    .popupContent input, .popupContent select, .popupContent button {
-      padding: 8px; border-radius:6px; border:none; font-size:16px;
-    }
+    .popup { position: fixed; top:0; left:0; right:0; bottom:0; background: rgba(0,0,0,0.8); display: none; justify-content: center; align-items: center; z-index: 1000; }
+    .popupContent { background: rgba(50,50,50,0.95); padding:20px; border-radius:15px; width:90%; max-width:400px; display:flex; flex-direction:column; gap:10px; }
+    .popupContent input, .popupContent button { padding: 8px; border-radius:6px; border:none; font-size:16px; }
     .popupContent button { background: #4CAF50; color:white; cursor:pointer; }
     .popupContent button.cancel { background: red; }
   </style>
 </head>
 <body>
 <div class="container">
-  <h1><i class="fa-solid fa-link"></i> Link Dashboard 
-    <button id="toggleEdit">Edit Mode</button>
-  </h1>
+  <h1>Link Dashboard <button id="toggleEdit">Edit Mode</button></h1>
   <div id="categoriesContainer"></div>
-  <footer>Tap category to expand/collapse | Drag & Drop | Add/Edit/Remove links</footer>
+  <footer>Tap category to expand/collapse | Drag & Drop | Add/Edit/Remove links | Custom categories | Manage categories ⚙️</footer>
 </div>
-
 <button id="addButton" class="floatingBtn">+</button>
 <button id="changeBackgroundBtn">Background</button>
 
@@ -152,11 +69,7 @@
     <h2>Add New Link</h2>
     <input type="text" id="newName" placeholder="Site Name" required>
     <input type="url" id="newURL" placeholder="https://example.com" required>
-    <select id="newCategory">
-      <option value="School">School</option>
-      <option value="Personal">Personal</option>
-      <option value="TechNews">Tech News</option>
-    </select>
+    <input type="text" id="newCategory" placeholder="Category (e.g., School, Personal)" required>
     <button id="saveLink">Add Link</button>
     <button id="closePopup" class="cancel">Cancel</button>
   </div>
@@ -167,6 +80,7 @@
   <div class="popupContent">
     <h2>Set Background</h2>
     <input type="text" id="bgInput" placeholder="Image URL or color code">
+    <input type="file" id="bgFile" accept="image/*">
     <div style="margin-top:10px;">
       <button id="previewBg">Preview</button>
       <button id="saveBg">Save</button>
@@ -177,12 +91,10 @@
 
 <script>
 let defaultLinks = [
-  {id: Date.now()+1, name:"UNOH Portal", url:"https://my.unoh.edu", category:"School"},
-  {id: Date.now()+2, name:"Canvas", url:"https://canvas.unoh.edu", category:"School"},
-  {id: Date.now()+3, name:"Gmail", url:"https://gmail.com", category:"Personal"},
-  {id: Date.now()+4, name:"YouTube", url:"https://youtube.com", category:"Personal"},
-  {id: Date.now()+5, name:"GitHub", url:"https://github.com", category:"Personal"},
-  {id: Date.now()+6, name:"The Verge", url:"https://www.theverge.com", category:"TechNews"}
+  {id: Date.now()+1, name:"Gmail", url:"https://gmail.com", category:"Personal"},
+  {id: Date.now()+2, name:"YouTube", url:"https://youtube.com", category:"Personal"},
+  {id: Date.now()+3, name:"GitHub", url:"https://github.com", category:"Personal"},
+
 ];
 
 let links = JSON.parse(localStorage.getItem("dashboardLinks")) || defaultLinks;
@@ -199,19 +111,41 @@ function renderLinks(){
     const section=document.createElement("div");
     section.className="category-section";
     section.innerHTML=`
-      <div class="category-header"><span>▼</span>${cat}</div>
+      <div class="category-header">
+        <span>▼</span>${cat}
+        <button class="categoryOptionsBtn" style="margin-left:10px; font-size:14px;">⚙️</button>
+      </div>
       <div class="link-grid" data-category="${cat}"></div>`;
     const grid = section.querySelector(".link-grid");
+
+    // Category options
+    const catBtn = section.querySelector(".categoryOptionsBtn");
+    catBtn.addEventListener("click", e=>{
+      e.stopPropagation();
+      const action = prompt(`Manage category "${cat}":\nType "rename" to rename or "delete" to remove this category and all links.`);
+      if(!action) return;
+      if(action.toLowerCase() === "rename"){
+        const newName = prompt("New category name:", cat);
+        if(!newName) return;
+        links = links.map(l=> l.category === cat ? {...l, category:newName} : l);
+        saveLinks(); renderLinks();
+      }
+      if(action.toLowerCase() === "delete"){
+        if(confirm(`Delete category "${cat}" and all links inside?`)){
+          links = links.filter(l=> l.category !== cat);
+          saveLinks(); renderLinks();
+        }
+      }
+    });
 
     links.filter(l=>l.category===cat).forEach(link=>{
       const currentLink = link;
       const a = document.createElement("a");
       a.href = currentLink.url;
       a.target = "_blank";
-      a.className = "link-box " + currentLink.category;
+      a.className = "link-box";
       a.dataset.id = currentLink.id;
 
-      // Favicon automatically
       let faviconUrl = `https://www.google.com/s2/favicons?sz=64&domain=${new URL(currentLink.url).hostname}`;
 
       a.innerHTML = `
@@ -273,13 +207,13 @@ function renderLinks(){
 
 renderLinks();
 
-// Edit Mode
+// Edit Mode toggle
 document.getElementById("toggleEdit").addEventListener("click", ()=>{
   editMode = !editMode;
   renderLinks();
 });
 
-// Add Link Popup
+// Add Link popup logic
 const addButton=document.getElementById("addButton");
 const popup=document.getElementById("popup");
 const closePopup=document.getElementById("closePopup");
@@ -288,33 +222,38 @@ const saveLink=document.getElementById("saveLink");
 addButton.addEventListener("click", ()=>{ popup.style.display="flex"; });
 closePopup.addEventListener("click", ()=>{ popup.style.display="none"; });
 saveLink.addEventListener("click", ()=>{
-  const name=document.getElementById("newName").value;
-  const url=document.getElementById("newURL").value;
-  const category=document.getElementById("newCategory").value;
-  if(!name || !url) return alert("Name and URL required!");
+  const name=document.getElementById("newName").value.trim();
+  const url=document.getElementById("newURL").value.trim();
+  const category=document.getElementById("newCategory").value.trim();
+  if(!name || !url || !category) return alert("Name, URL, and Category required!");
   links.push({id: Date.now(), name, url, category});
   saveLinks(); renderLinks(); popup.style.display="none";
   document.getElementById("newName").value="";
   document.getElementById("newURL").value="";
+  document.getElementById("newCategory").value="";
 });
 
-// Background Popup
+// Background popup logic
 const bgPopup = document.getElementById("bgPopup");
 const changeBgBtn = document.getElementById("changeBackgroundBtn");
 const bgInput = document.getElementById("bgInput");
+const bgFile = document.getElementById("bgFile");
 const previewBg = document.getElementById("previewBg");
 const saveBg = document.getElementById("saveBg");
 const cancelBg = document.getElementById("cancelBg");
 
 function setBackground(bg){
-  if(bg.startsWith("http")){
+  if(!bg) return;
+  if(bg.startsWith("data:") || bg.startsWith("http")){
     document.body.style.backgroundImage=`url(${bg})`;
-    document.body.style.backgroundSize="cover";
-    document.body.style.backgroundPosition="center";
-    document.body.style.backgroundColor="";
+    document.body.style.backgroundRepeat = "no-repeat";
+    document.body.style.backgroundSize = "cover";
+    document.body.style.backgroundPosition = "center";
+    document.body.style.backgroundAttachment = "fixed";
+    document.body.style.backgroundColor = "";
   } else {
-    document.body.style.backgroundImage="none";
-    document.body.style.backgroundColor=bg;
+    document.body.style.backgroundImage = "none";
+    document.body.style.backgroundColor = bg;
   }
   localStorage.setItem("bg", bg);
 }
@@ -322,13 +261,17 @@ function setBackground(bg){
 const savedBg = localStorage.getItem("bg");
 if(savedBg) setBackground(savedBg);
 
-changeBgBtn.addEventListener("click", ()=>{ 
-  bgInput.value = savedBg || ""; 
-  bgPopup.style.display="flex"; 
-});
+changeBgBtn.addEventListener("click", ()=>{ bgInput.value = savedBg || ""; bgFile.value=""; bgPopup.style.display="flex"; });
 previewBg.addEventListener("click", ()=>{ setBackground(bgInput.value.trim()); });
 saveBg.addEventListener("click", ()=>{ setBackground(bgInput.value.trim()); bgPopup.style.display="none"; });
 cancelBg.addEventListener("click", ()=>{ bgPopup.style.display="none"; if(savedBg) setBackground(savedBg); });
+bgFile.addEventListener("change", (e)=>{
+  const file = e.target.files[0];
+  if(!file) return;
+  const reader = new FileReader();
+  reader.onload = function(evt){ bgInput.value = evt.target.result; setBackground(evt.target.result); }
+  reader.readAsDataURL(file);
+});
 </script>
 </body>
 </html>
