--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ button{
 
 <script>
 let links = JSON.parse(localStorage.getItem("links")) || [
-  {name:"google", url:"https://google.com", category:"personal"},
+  {name:"MyUNOH", url:"https://my.unoh.edu", category:"School"},
+  {name:"Canvas", url:"https://canvas.unoh.edu", category:"School"},
   {name:"The Verge", url:"https://theverge.com", category:"Tech News"}
 ];
 
